feat: handle popup calls

--- a/resources/unpacked/popup.html
+++ b/resources/unpacked/popup.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-
-  <script type="text/javascript" src="out/shared.js">
-</script>
-  <script type="text/javascript" src="out/popup.js">
-</script>
-
-  <title>Chromex popup</title>
-</head>
-
-<body>
-  <pre>
-THIS IS CHROMEX POPUP
-</pre>
-</body>
+  <head>
+    <script type="text/javascript" src="out/shared.js"></script>
+    <script type="text/javascript" src="out/popup.js"></script>
+    <title>Chromex popup</title>
+  </head>
+  <body>
+    <pre>
+      POPUP
+    </pre>
+  </body>
 </html>
