feat: show retrieved date list on popup

--- a/resources/unpacked/popup.html
+++ b/resources/unpacked/popup.html
@@ -4,11 +4,15 @@
   <head>
     <script type="text/javascript" src="out/shared.js"></script>
     <script type="text/javascript" src="out/popup.js"></script>
-    <title>Chromex popup</title>
+    <link rel="stylesheet" type="text/css" href="aeterna.css">
+    <title>aeterna</title>
   </head>
   <body>
-    <pre>
-      POPUP
-    </pre>
+    <div class="aeterna-container">
+      <h3>Dates:</h3>
+      <ul id="aeterna-dates">
+        <li>04-17-2022</li>
+      </ul>
+    </div>
   </body>
 </html>
