--- a/resources/unpacked/contents.html
+++ b/resources/unpacked/contents.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <script type="text/javascript" src="out/shared.js"></script>
-    <script type="text/javascript" src="out/popup.js"></script>
+    <script type="text/javascript" src="out/visualizer.js"></script>
     <link rel="stylesheet" type="text/css" href="aeterna.css">
     <title>aeterna - contents</title>
   </head>
   <body>
     <div>
-      <h3>Dates:</h3>
+      <h3>Viewing date:
+        <span id="current-date">date</span>
+      </h3>
       <ul id="aeterna-dates">
       </ul>
     </div>
