fix: save highlights in a decent format

--- a/resources/unpacked/contents.html
+++ b/resources/unpacked/contents.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <h3>Viewing date:
-        <span id="current-date">date</span>
+        <span id="viewing-date">date</span>
       </h3>
       <ul id="aeterna-dates">
       </ul>
