feat: quotes visualization

--- a/resources/unpacked/contents.html
+++ b/resources/unpacked/contents.html
@@ -11,7 +11,7 @@
       <h3>Viewing date:
         <span id="viewing-date">date</span>
       </h3>
-      <ul id="aeterna-dates">
+      <ul id="aeterna-contents">
       </ul>
     </div>
   </body>
