feat: improve visualization view

--- a/resources/unpacked/contents.html
+++ b/resources/unpacked/contents.html
@@ -7,11 +7,12 @@
     <title>aeterna - contents</title>
   </head>
   <body>
-    <div>
-      <h3>Viewing date:
+    <div class="aeterna-visualization-container">
+      <h3>Highlights for:
         <span id="viewing-date">date</span>
       </h3>
-      <ul id="aeterna-contents">
+      <ul id="aeterna-contents"
+          class="aeterna-contents">
       </ul>
     </div>
   </body>
