--- a/resources/unpacked/popup.html
+++ b/resources/unpacked/popup.html
@@ -8,7 +8,7 @@
     <title>aeterna</title>
   </head>
   <body>
-    <div class="aeterna-container">
+    <div class="aeterna-popup-container">
       <h3>Dates:</h3>
       <ul id="aeterna-dates">
       </ul>
